# order-procesing-system

./: .gitignore  OrderSystem_Postman.json  README.en.md  README.es.md  README.md  docker-compose.yml  run_integration_tests.sh
.github/workflows/: ci.yml
inventory-service/: Dockerfile  README.md  pyproject.toml
inventory-service/alembic/: env.py
inventory-service/alembic/versions/: initial_migration.py
inventory-service/app/: consumer.py  database.py  models.py  seeder.py
inventory-service/tests/: test_inventory_service.py
notification-service/: Dockerfile  README.md  pyproject.toml
notification-service/app/: consumer.py
notification-service/tests/: test_notification_service.py
order-service/: Dockerfile  README.md  pyproject.toml
order-service/alembic/versions/: initial_migration.py
order-service/app/: consumer.py  database.py  main.py  messaging.py  models.py  schemas.py
order-service/tests/: test_order_service.py
payment-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
payment-service/alembic/versions/: initial_migration.py
payment-service/app/: consumer.py  database.py  models.py
payment-service/tests/: test_payment_service.py
tests/: requirements.txt  test_integration.py
